<resources>
    <string name="app_name">BloodBond</string>
    <string name="blood_bond">Blood Bond</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro_usu_rio">Cadastro usuário</string>
    <string name="usu_rio">Usuário</string>
    <string name="institui_o">Instituição</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="example_email_com">example@email.com</string>
    <string name="endere_o">Endereço</string>

    <string-array name="blood_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

</resources>
